force-app/main/default/objects/Lead/fields/Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Reason__c</fullName>
    <description>Notes for why the lead was assigned to a rep.</description>
    <label>Assignment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>