force-app/main/default/objects/Lead/fields/Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Source_Details__c</fullName>
    <description>Capture detailed information about the lead source.</description>
    <label>Source Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>