force-app/main/default/objects/Lead/listViews/Low_Priority_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Low_Priority_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Low Priority Leads</label>
    <queue>Low_Priority_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>